# parallelGM_4phase

./: .gitignore  CMakeLists.txt  README.md
code/: execute.sh  makefile
code/include/: definitions.h  dsp.h  graph.h  rg.h
code/main/: main.cpp  main_dump.cpp  tbb_study.cpp
code/source/: graph.cpp  rg.cpp
